// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traverse-up > can traverse up to pick the config file from ./a > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /REPO_ROOT/node_modules/.pnpm/nadle{version}/node_modules/nadle/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/traverse-up/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from /ROOT/test/__fixtures__/traverse-up/a
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1 > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /REPO_ROOT/node_modules/.pnpm/nadle{version}/node_modules/nadle/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/traverse-up/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1/a11/a112 > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /REPO_ROOT/node_modules/.pnpm/nadle{version}/node_modules/nadle/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/traverse-up/a/a1/a11/nadle.config.mjs

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1/a11/a112
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1/a12 > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /REPO_ROOT/node_modules/.pnpm/nadle{version}/node_modules/nadle/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/traverse-up/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1/a12
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;
